--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,12 @@
-
+@import url('reset.css');
+@import url('typography.css');
+@import url('layout.css');
+@import url('header.css');
+@import url('navigation.css');
+@import url('buttons.css');
+@import url('hero.css');
+@import url('mediaqueries.css');
+@import url('footer.css');
+@import url('how-it-works.css');
+@import url('faq.css');
+@import url('create_quiz.css');
